
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2012-12-30
	* The bogofilter project was updated to the new SourceForge.net
	  platform. This has caused the URLs to change. Use one of these
	  commands for a read-only checkout:
	  svn checkout svn://svn.code.sf.net/p/bogofilter/code/trunk bogofilter
	  svn checkout http://svn.code.sf.net/p/bogofilter/code/trunk bogofilter

	  And developers would use, replacing joe by their sf.net login:
	  svn checkout --username=joe svn+ssh://m-a@svn.code.sf.net/p/bogofilter/code/trunk bogofilter

	2012-12-03
	* Add bogofilter-SA-2012-01 (CVE-2012-5468).
	* Fix XML form of Bulgarian FAQ so that it validates;
	  and validate XHTML at build time.
	* Mark Berkeley DB 5.2.42 and 5.3.21 supported.

1.2.3	2012-12-02 (released)

	2012-10-24
	* Update configure.ac to avoid autoconf 2.68 warnings, by 
	  (a) quoting the first AC_RUN_IFELSE argument, an
	      AC_LANG_PROGRAM(), with [ ], and
	  (b) providing an explicit "true" assumption for Berkeley DB
	      capabilities to avoid cross-compilation warnings.

	2012-10-22
	* Security bugfix for CVE-2012-5468 (bogofilter-SA-2012-01):
	  Fix a heap corruption in base64 decoder on invalid input.
	  Analysis and patch by Julius Plenz <plenz@cis.fu-berlin.de>.

	2011-01-02
	* Added bogofilter-faq-bg.html, a Bulgarian translation of the FAQ.
	  (thanks to Albert Ward)

	2010-10-29
	* Mark "Berkeley DB 5.1.19: (August 27, 2010)" supported.


1.2.2	2010-07-08 (released)

	2010-07-05
	* Use a better PRNG for random sleeps. That is arc4random() where
	  available, and drand48() elsewhere.

	* Assorted fixes for issues found with clang analyzer: