@@ -15,6 +15,11 @@
 
 -------------------------------------------------------------------------------
 
+	2013-01-20
+	* Change lexer API/ABI a bit so as to work with flex 2.5.36 generated
+	  lexers (for instance, on Fedora 18 "Spherical Cow") that flip the
+	  type of yyleng from int to size_t. We use a signed long internally.
+
 	2012-12-30
 	* The bogofilter project was updated to the new SourceForge.net
 	  platform. This has caused the URLs to change. Use one of these
